[package]
name = "project-name"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.3"
log = "0.4.22"
lsp-server = "0.7.6"
lsp-types = "0.97.0"
rayon = "1.10.0"
serde = "1.0.204"
serde_json = "1.0.120"
tree-sitter = "0.22.6"
tree-sitter-elixir = "0.2.0"
walkdir = "2.5.0"

[dev-dependencies]
pretty_assertions = "1.4.0"
