[package]
name = "project-name"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.5"
lazy_static = "1.5.0"
lsp-server = "0.7.6"
lsp-types = "0.97.0"
rayon = "1.10.0"
serde = "1.0.204"
serde_json = "1.0.120"
string-interner = "0.17.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
tree-sitter = "0.22.6"
tree-sitter-elixir = "0.2.0"
directories = "5.0"
trie-rs = { version = "0.4.2", features = ["rayon"] }
walkdir = "2.5.0"

[dev-dependencies]
pretty_assertions = "1.4.0"
